<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg"
        android:gravity="center" >

        <TextView
            android:id="@+id/huangli_tiem_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_title_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/report_item_padding" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_first_text" />

                <com.njbst.view.FlowRadioGroup
                    android:id="@+id/grouptypes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/qzzp_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_tab_qzzp_text" />

                    <RadioButton
                        android:id="@+id/fcxx_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_tab_fcxx_text" />

                    <RadioButton
                        android:id="@+id/esmm_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_tab_esmm_text" />

                    <RadioButton
                        android:id="@+id/zhjy_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_tab_zhjy_text" />

                </com.njbst.view.FlowRadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/report_item_padding" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_sec_text" />

                <RadioGroup
                    android:id="@+id/types"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/nan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/more_tab_qzzp_text" />

                    <RadioButton
                        android:id="@+id/nv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_tab_fcxx_text" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/report_item_padding" >

                <EditText
                    android:id="@+id/rcon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/report_item_padding"
                    android:background="@drawable/edittext_bg"
                    android:ems="10"
                    android:gravity="top|left"
                    android:hint="@string/report_con_text"
                    android:minLines="5" />

                <EditText
                    android:id="@+id/rtel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/report_item_padding"
                    android:background="@drawable/edittext_bg"
                    android:ems="10"
                    android:hint="@string/report_tel_text"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/rqq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/report_item_padding"
                    android:background="@drawable/edittext_bg"
                    android:ems="10"
                    android:hint="@string/report_qq_text" />

                <EditText
                    android:id="@+id/rpwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/report_item_padding"
                    android:background="@drawable/edittext_bg"
                    android:ems="10"
                    android:hint="@string/report_pwd_text"
                    android:inputType="textPassword" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/savebut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/report_item_padding"
                        android:layout_weight="1"
                        android:background="@drawable/buttton"
                        android:minHeight="35dp"
                        android:onClick="butClick"
                        android:text="@string/report_savebut_text"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/cancelbut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/report_item_padding"
                        android:layout_weight="1"
                        android:background="@drawable/buttton"
                        android:minHeight="35dp"
                        android:onClick="butClick"
                        android:text="@string/report_cancelbut_text"
                        android:textColor="@color/white" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        
    </ScrollView>

</LinearLayout>