<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg"
        android:gravity="center" >

        <TextView
            android:id="@+id/huangli_tiem_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jubao_title_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/login_left_right"
        android:paddingRight="@dimen/login_left_right" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/login_padding"
            android:paddingTop="@dimen/login_padding" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jubao_type_text" />

            <RadioGroup
                android:id="@+id/jubaotypes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/qizha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/jubao_qizha_text" />

                <RadioButton
                    android:id="@+id/seqing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jubao_seqing_text" />

                <RadioButton
                    android:id="@+id/qita"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jubao_qita_text" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/login_padding"
            android:paddingTop="@dimen/login_padding" >

            <EditText
                android:id="@+id/jname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:hint="@string/jubao_name_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/login_padding"
            android:paddingTop="@dimen/login_padding" >

            <EditText
                android:id="@+id/jtel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:hint="@string/jubao_tel_text"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/login_padding"
                android:paddingTop="@dimen/login_padding" >

                <Button
                    android:id="@+id/jb_but"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttton"
                    android:onClick="butClick"
                    android:text="@string/jubao_but_text"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>