<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg"
        android:gravity="center" >

        <TextView
            android:id="@+id/huangli_tiem_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/logo_padding"
        android:paddingTop="@dimen/logo_padding" >

        <ImageView
            android:id="@+id/my_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/login_left_right"
        android:paddingRight="@dimen/login_left_right" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/login_padding"
            android:paddingTop="@dimen/login_padding" >

            <EditText
                android:id="@+id/phonenum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:hint="@string/login_hint"
                android:inputType="phone">

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/login_padding"
            android:paddingTop="@dimen/login_padding" >

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:hint="@string/pass_hint"
                android:inputType="textPassword"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/login_padding"
                android:paddingTop="@dimen/login_padding" >

                <Button
                    android:id="@+id/logintbut"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_but"
                    android:onClick="loginclick"
                    android:text="@string/login_but_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="forgetclick"
                    android:padding="@dimen/login_padding" >

                    <TextView
                        android:id="@+id/my_con"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forget_text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="right"
                    android:onClick="regclick"
                    android:padding="@dimen/login_padding" >

                    <TextView
                        android:id="@+id/reg_but"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_text" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/login_padding" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="left|center"
                android:onClick="QQLogin" >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/qqlogo" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qq_login_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center"
                android:clickable="true"
                android:focusable="true"
                android:onClick="WxLogin" >

                <ImageView
                    android:id="@+id/promotion_but"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/weixinlogo" />

                <TextView
                    android:id="@+id/weathertext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weixin_login_text" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
