<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg"
        android:gravity="center" >

        <TextView
            android:id="@+id/huangli_tiem_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_title_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/logo_padding"
        android:paddingTop="@dimen/logo_padding" >

        <ImageView
            android:id="@+id/my_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/login_left_right"
        android:paddingRight="@dimen/login_left_right" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/login_padding"
            android:paddingTop="@dimen/login_padding" >

            <EditText
                android:id="@+id/phonenum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:hint="@string/login_hint"
                android:inputType="phone" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/login_padding"
            android:paddingTop="@dimen/login_padding" >

            <EditText
                android:id="@+id/yzmcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:hint="@string/forget_auth_text"
                android:inputType="textPassword|number" />

            <Button
                android:id="@+id/yzmbut"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/forget_yzmbut_padding"
                android:layout_weight="1"
                android:onClick="codeclick"
                android:background="@drawable/zhuan_but"
                android:minHeight="30dip"
                android:text="@string/forget_yzmbut_text"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/login_padding"
                android:paddingTop="@dimen/login_padding" >

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_but"
                    android:onClick="nextclick"
                    android:text="@string/forget_but_text"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
